<resources>
    <string name="ime_name">Terminal++ Keyboard</string>
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="application_terminal">Terminal IDE</string>
    <string name="preferences">Preferences</string>
    <string name="new_window">New window</string>
    <string name="close_window">Close window</string>
    <string name="window_list">Windows</string>
    <string name="prev_window">Prev window</string>
    <string name="next_window">Next window</string>
    <string name="reset">Reset term</string>
    <string name="send_email">Email to</string>
    <string name="special_keys">Special keys</string>
    <string name="toggle_soft_keyboard">Toggle soft keyboard</string>
    <string name="enable_wakelock">Take WakeLock</string>
    <string name="disable_wakelock">Drop WakeLock</string>
    <string name="enable_wifilock">Take WifiLock</string>
    <string name="disable_wifilock">Drop WifiLock</string>
    <string name="edit_text">Edit text</string>
    <string name="select_text">Select text</string>
    <string name="copy_all">Copy all</string>
    <string name="paste">Paste</string>
    <string name="service_notify_text">Terminal session is running</string>
    <string name="screen_preferences">Screen</string>
    <string name="title_statusbar_preference">Status bar</string>
    <string name="summary_statusbar_preference">Show/hide status bar.</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>
    <string name="title_cursorstyle_preference">Cursor style</string>
    <string name="summary_cursorstyle_preference">Choose cursor style.</string>
    <string name="dialog_title_cursorstyle_preference">Cursor style</string>
    <string name="title_cursorblink_preference">Cursor blink</string>
    <string name="summary_cursorblink_preference">Choose cursor blink.</string>
    <string name="dialog_title_cursorblink_preference">Cursor blink</string>
    <string name="text_preferences">Text</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="title_fnkey_preference">Fn key</string>
    <string name="summary_fnkey_preference">Choose Fn key.</string>
    <string name="dialog_title_fnkey_preference">Fn key</string>
    <string name="title_ime_preference">Input method</string>
    <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
    <string name="dialog_title_ime_preference">Input method</string>
    <string name="shell_preferences">Shell</string>
    <string name="title_shell_preference">Command line</string>
    <string name="summary_shell_preference">Specify the shell command line.</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="title_initialcommand_preference">Initial command</string>
    <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
    <string name="dialog_title_initialcommand_preference">Initial Command</string>
    <string name="default_value_statusbar_preference">1</string>
    <string name="default_value_cursorstyle_preference">0</string>
    <string name="default_value_cursorblink_preference">0</string>
    <string name="default_value_fontsize_preference">12</string>
    <string name="default_value_color_preference">1</string>
    <string name="default_value_controlkey_preference">7</string>
    <string name="default_value_fnkey_preference">7</string>
    <string name="default_value_ime_preference">0</string>
    <string name="default_value_shell_preference">/system/bin/sh -</string>
    <string name="default_value_initialcommand_preference">export HOME=/data/data/com.terminal.ide/files;cd $HOME</string>
    <string name="control_key_dialog_title">Control and Function Keys</string>
    <string name="cmd_menu_copypasteemail">Copy / Paste / Email</string>
    <string name="cmd_menu_emailtranscript">Email Transcript</string>
    <string name="cmd_menu_copyalltext">Copy ALL Text</string>
    <string name="cmd_menu_paste">Paste</string>
    <string name="cmd_menu_toggleoptions">Toggle Options</string>
    <string name="cmd_menu_toggle_backesc">Toggle BACK=>ESC</string>
    <string name="cmd_menu_toggle_keylogger">Toggle Key Logger</string>
    <string name="cmd_menu_toggle_softkeyboard">Toggle Soft Keyboard</string>
    <string name="cmd_menu_terminalist">Terminal List</string>
    <string name="main_setting_wakelockoptions">WAKE-LOCK Options</string>
    <string name="main_setting_cpulock">CPU Lock</string>
    <string name="main_setting_keepthecpurunning">Keep the CPU running at all times</string>
    <string name="main_setting_screenlock">Screen Lock</string>
    <string name="main_setting_keepscreenon">Keep the screen on at all times [Though it can dim]</string>
    <string name="main_setting_wifilock">Wifi Lock</string>
    <string name="main_setting_keepwifion">Keep the wifi on at all times</string>
    <string name="main_setting_basicspecialkey">Basic Special Keys</string>
    <string name="main_setting_basicspecialkey_ctrlkey">CTRL Key</string>
    <string name="main_setting_esckey">ESC Key</string>
    <string name="main_setting_chooseashrdkey">Choose a hard key for ESC</string>
    <string name="main_setting_hardkeyboardmappins">Hard Keyboard Mappings</string>
    <string name="main_setting_resetallmappings">Reset All mappings</string>
    <string name="main_setting_resetallkeymappingssummary">Reset all key mappings to -1</string>
    <string name="main_setting_resetallkeymappingsdialogmessage">Are you sure you wish to reset all key mappings to -1 ?\n\nNB: You will need to restart this Preference Activity to view these changes.</string>
    <string name="main_setting_resetallkeymappingsbutton_clear">Clear Keys</string>
    <string name="main_setting_resetallkeymappingsbutton_cancel">Cancel</string>
    <string name="main_setting_externalkeyboardmappings">External Keyboard Mappings</string>
    <string name="main_setting_externalkeyboardmappingssummary">Map keycodes from your external keyboard to Special characters. CTRL / ALT / FN  / ESC </string>
    <string name="main_setting_enabledisableallmappings">Enable / Disable ALL Mappings</string>
    <string name="main_setting_keyboardmappings">Keyboard Mappings</string>
    <string name="main_setting_keyboardmappingssummary">You can set key codes that overide the \'system\' key codes from here [only from within Terminal IDE] so BE CAREFUL!! -1 is the default ignore code.</string>
    <string name="main_setting_enablehardmappings">Enable Hard Mappings</string>
    <string name="main_setting_mainkeycodes">Main Key Codes</string>
    <string name="main_setting_leftctrlkey">Left CTRL Key</string>
    <string name="main_setting_ctrlkeysummary">CTRL key</string>
    <string name="main_setting_ctrlkeydialogtitle">CTRL key</string>
    <string name="main_setting_rightctrlkey">Right CTRL Key</string>
    <string name="main_setting_escapekey">Escape Key</string>
    <string name="main_setting_escapekeysummary">The Escape key</string>
    <string name="main_setting_esckeydialogtitle">ESC Key</string>
    <string name="main_setting_leftaltkey">Left ALT Key</string>
    <string name="main_setting_altkeysummary">ALT key</string>
    <string name="main_setting_altkeydialogtitle">ALT key</string>
    <string name="main_setting_rightaltkey">Right ALT Key</string>
    <string name="main_setting_functionkey">Function Key</string>
    <string name="main_setting_functionkeysummary">Press FN+[0~9]=>F1~F10. FN+O=>F11. FN+P=>F12</string>
    <string name="main_setting_fnkeydialogtitle">FN Key</string>
    <string name="main_setting_morekeycodes">More Key Codes (Should already work)</string>
    <string name="main_setting_tabkey">TAB Key</string>
    <string name="main_setting_tabkeysummary">TAB Key</string>
    <string name="main_setting_leftshiftkey">Left SHIFT Key</string>
    <string name="main_setting_rightshiftkey">Right SHIFT Key</string>
    <string name="main_setting_spacekey">SPACE Key</string>
    <string name="main_setting_enterkey">ENTER Key</string>
    <string name="main_setting_delkey">DEL Key</string>
    <string name="main_setting_backspace">BACKSPACE Key</string>
    <string name="main_setting_pageupkey">Page UP Key</string>
    <string name="main_setting_pagedownkey">Page DOWN Key</string>
    <string name="main_setting_homekey">Home Key</string>
    <string name="main_setting_homekeysummary">Home key. Not the Android version, the keyboard version.</string>
    <string name="main_setting_endkey">End Key</string>
    <string name="main_setting_arrowkeys">ARROW keys (Should work as DPAD)</string>
    <string name="main_setting_uparrowkey">UP Arrow Key</string>
    <string name="main_setting_upkey">UP key</string>
    <string name="main_setting_downwrrowkey">DOWN Arrow Key</string>
    <string name="main_setting_downkey">OWN key</string>
    <string name="main_setting_leftarrowkey">LEFT Arrow Key</string>
    <string name="main_setting_leftkey">LEFT key</string>
    <string name="main_setting_rightarrowkey">RIGHT Arrow Key</string>
    <string name="main_setting_rightkey">RIGHT key</string>
    <string name="cmd_keyboard_settings_keypressactions">Key Press Actions</string>
    <string name="cmd_keyboard_settings_vibrate">Vibrate</string>
    <string name="cmd_keyboard_settings_vibrateonkeypresssummary">Vibrate on key press</string>
    <string name="cmd_keyboard_settings_vibratedialogtitle">Vibrate</string>
    <string name="cmd_keyboard_settings_sound">Sound</string>
    <string name="cmd_keyboard_settings_soundsummary">Play a click on key press</string>
    <string name="cmd_keyboard_settings_sounddialogtitle">Sound</string>
    <string name="cmd_keyboard_settings_keyboardsizepartrait">Keyboard Size Portrait</string>
    <string name="cmd_keyboard_settings_keyboardportraittype">Keyboard portrait type</string>
    <string name="cmd_keyboard_settings_keyboardportraittypesummary">Full or mini keyboard in portrait mode</string>
    <string name="cmd_keyboard_settings_keyboardportraitdialogtitle">Portrait Keyboard</string>
    <string name="cmd_keyboard_settings_keyboardportaitheight">Keyboard portrait height</string>
    <string name="cmd_keyboard_settings_keyboardportaitheightsummary">The height of the keyboard in portrait mode</string>
    <string name="cmd_keyboard_settings_keyboardportaitheightdialogtitle">Portrait Height</string>
    <string name="cmd_keyboard_settings_keyboardsizelandscape">Keyboard Size Landscape</string>
    <string name="cmd_keyboard_settings_keyboardlandscapetype">Keyboard landscape type</string>
    <string name="cmd_keyboard_settings_keyboardlandscapetypesummary">Full or mini keyboard in landscape mode</string>
    <string name="cmd_keyboard_settings_keyboardlandscapetypedialogtitle">Landscape Keyboard</string>
    <string name="cmd_keyboard_settings_keyboardlandscapeheight">Keyboard landscape height</string>
    <string name="cmd_keyboard_settings_keyboardlandscapeheightsummary">The height of the keyboard in landscape mode</string>
    <string name="cmd_keyboard_settings_keyboardlandscapeheightdialogtitle">Landscape Height</string>
</resources>